--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -68,6 +68,7 @@ contact_page:
       'Health and Human Services': Health and Human Services
       'HHS Grants.gov': HHS Grants.gov
       'HHS National Institutes of Health (NIH)': HHS National Institues of Health (NIH)
+      'Homeland Security Information Network (HSIN)': Homeland Security Information Network (HSIN)
       'Housing and Urban Development': Housing and Urban Development
       'Internal Revenue Service (IRS)': Internal Revenue Service (IRS)
       'Library of Congress': Library of Congress
@@ -99,6 +100,7 @@ contact_page:
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Trusted Traveler Programs (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': U.S. Agency for International Development
       'U.S. Citizenship and Immigration Services (USCIS) - E-Verify': U.S. Citizenship and Immigration Services (USCIS) - E-Verify
+      'U.S. Citizenship and Immigration Services (USCIS) - myAccount': U.S. Citizenship and Immigration Services (USCIS) - myAccount
       'U.S. Citizenship and Immigration Services (USCIS) - SAVE ': U.S. Citizenship and Immigration Services (USCIS) - SAVE
       'U.S. Department of Agriculture': U.S. Department of Agriculture
       'U.S. International Trade Commission': U.S. International Trade Commission
