--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -72,6 +72,7 @@ contact_page:
       'Health and Human Services': Département de la Santé et des Services humains
       'HHS Grants.gov': Grants.gov du HHS (département de la Santé et des Services humains)
       'HHS National Institutes of Health (NIH)': Instituts nationaux de la santé (NIH) du HHS
+      'Homeland Security Information Network (HSIN)': Réseau d’information du département de la Sécurité intérieure (HSIN)
       'Housing and Urban Development': Logement et urbanisme
       'Internal Revenue Service (IRS)': Service des recettes internes (IRS)
       'Library of Congress': Bibliothèque du Congrès
@@ -105,6 +106,9 @@ contact_page:
       'U.S. Citizenship and Immigration Services (USCIS) - E-Verify':
         Services de citoyenneté et d’immigration des États-Unis (USCIS) -
         E-Verify
+      'U.S. Citizenship and Immigration Services (USCIS) - myAccount':
+        Services de citoyenneté et d’immigration des États-Unis (USCIS) -
+        myAccount
       'U.S. Citizenship and Immigration Services (USCIS) - SAVE ': Services de citoyenneté et d’immigration des États-Unis (USCIS) - SAVE
       'U.S. Department of Agriculture': Département de l’Agriculture des États-Unis
       'U.S. International Trade Commission': Commission du commerce international des États-Unis
