--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -231,32 +231,31 @@ help_page:
       image: /assets/img/help/get-started.svg
       title: Get started with Login.gov
       url: /help/get-started/overview/
+      slug: get-started
     - description: Forgot your password? Locked out of your account? We’ll help you
         resolve access issues.
       image: /assets/img/help/trouble-signing-in.svg
       title: Trouble signing in?
       url: /help/trouble-signing-in/overview/
+      slug: trouble-signing-in
     - description: Change your account settings including your password, phone number,
         email, and more.
       image: /assets/img/help/manage-your-account.svg
       title: Manage your account
       url: /help/manage-your-account/overview/
+      slug: manage-your-account
     - description: Get help with Trusted Traveler Programs (TTP) and SAM.gov.
       image: /assets/img/help/help-specific-agencies.svg
       title: Help with specific agencies
       url: /help/specific-agencies/overview/
+      slug: specific-agencies
     - description: Learn about options for verifying your identity.
       image: /assets/img/help/verify-your-id.svg
       title: Verify your identity
       url: /help/verify-your-identity/overview/
+      slug: verify-your-identity
   p_1: Browse common topics
   title: How can we help?
-help_subpages:
-  get-started: Get started with Login.gov
-  manage-your-account: Manage your account
-  specific-agencies: Help with specific agencies
-  trouble-signing-in: Trouble signing in?
-  verify-your-identity: Verify your identity
 identifier:
   accessible_labels:
     description: Agency description
