--- a/package.json
+++ b/package.json
@@ -81,5 +81,8 @@
     "react-dom": "^18.2.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.0.1"
+  },
+  "overrides": {
+    "trim": "^0.0.3"
   }
 }
