Update header, categories

--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -251,31 +251,31 @@ help_page:
     - description: Créez votre compte. Informez-vous sur les options
         d’authentification et sur davantage de caractéristiques des comptes.
       image: /assets/img/help/get-started.svg
-      title: Démarrage avec Login.gov
+      title: Créer un compte
       url: /fr/help/get-started/overview/
       slug: get-started
     - description: Mot de passe oublié ? Compte verrouillé ? Nous vous aiderons à
         résoudre les problèmes d’accès. Nous vous aiderons à résoudre vos
         problèmes d’accès.
       image: /assets/img/help/trouble-signing-in.svg
-      title: Vous rencontrez des difficultés pour vous connecter ?
+      title: Difficultés pour se connecter
       url: /fr/help/trouble-signing-in/overview/
       slug: trouble-signing-in
     - description: Modifiez les paramètres de votre compte, notamment votre mot de
         passe, votre numéro de téléphone, votre adresse e-mail, etc.
       image: /assets/img/help/manage-your-account.svg
-      title: Gérer votre compte
+      title: Gérer un compte
       url: /fr/help/manage-your-account/overview/
       slug: manage-your-account
     - description: Obtenez de l’aide avec les Programmes pour voyageurs dignes de
         confiance (TTP) et SAM.gov.
       image: /assets/img/help/help-specific-agencies.svg
-      title: Aide concernant des organismes spécifiques
+      title: Aide avec les organismes
       url: /fr/help/specific-agencies/overview/
       slug: specific-agencies
     - description: Informez-vous sur les possibilités de vérification de votre identité.
       image: /assets/img/help/verify-your-id.svg
-      title: Confirmer votre identité
+      title: Confirmer mon identité
       url: /fr/help/verify-your-identity/overview/
       slug: verify-your-identity
   p_1: Parcourir les thèmes courants
