--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -229,29 +229,29 @@ help_page:
     - description: Create your account. Learn about authentication options and more
         account features.
       image: /assets/img/help/get-started.svg
-      title: Get started with Login.gov
+      title: Creating an account
       url: /help/get-started/overview/
       slug: get-started
     - description: Forgot your password? Locked out of your account? We’ll help you
         resolve access issues.
       image: /assets/img/help/trouble-signing-in.svg
-      title: Trouble signing in?
+      title: Trouble signing in
       url: /help/trouble-signing-in/overview/
       slug: trouble-signing-in
     - description: Change your account settings including your password, phone number,
         email, and more.
       image: /assets/img/help/manage-your-account.svg
-      title: Manage your account
+      title: Manage account
       url: /help/manage-your-account/overview/
       slug: manage-your-account
     - description: Get help with Trusted Traveler Programs (TTP) and SAM.gov.
       image: /assets/img/help/help-specific-agencies.svg
-      title: Help with specific agencies
+      title: Help with agencies
       url: /help/specific-agencies/overview/
       slug: specific-agencies
     - description: Learn about options for verifying your identity.
       image: /assets/img/help/verify-your-id.svg
-      title: Verify your identity
+      title: Verify my identity
       url: /help/verify-your-identity/overview/
       slug: verify-your-identity
   p_1: Browse common topics
