--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -237,30 +237,30 @@ help_page:
     - description: Cree su cuenta. Más información sobre las opciones de autenticación
         y otras funciones de la cuenta.
       image: /assets/img/help/get-started.svg
-      title: Empiece a utilizar Login.gov
+      title: Cree una cuenta
       url: /es/help/get-started/overview/
       slug: get-started
     - description: ¿Olvidó su contraseña? ¿Está bloqueado el acceso a su cuenta? Le
         ayudaremos a resolver los problemas de acceso.
       image: /assets/img/help/trouble-signing-in.svg
-      title: ¿Tiene problema para iniciar sesión?
+      title: Problemas para iniciar sesión
       url: /es/help/trouble-signing-in/overview/
       slug: trouble-signing-in
     - description: Cambie la configuración de su cuenta, su contraseña, número de
         teléfono, correo electrónico y más.
       image: /assets/img/help/manage-your-account.svg
-      title: Administre su cuenta
+      title: Administrar una cuenta
       url: /es/help/manage-your-account/overview/
       slug: manage-your-account
     - description: Obtenga ayuda con los Programas para viajeros de confianza (TTP) y
         SAM.gov.
       image: /assets/img/help/help-specific-agencies.svg
-      title: Ayuda con agencias específicas
+      title: Ayuda con agencias
       url: /es/help/specific-agencies/overview/
       slug: specific-agencies
     - description: Infórmese sobre las opciones para verificar su identidad.
       image: /assets/img/help/verify-your-id.svg
-      title: Verifique su identidad
+      title: Verificar mi identidad
       url: /es/help/verify-your-identity/overview/
       slug: verify-your-identity
   p_1: Explorar temas comunes
