--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -249,6 +249,15 @@ help_page:
       image: /assets/img/help/verify-your-id.svg
       title: Verify your identity
       url: /help/verify-your-identity/overview/
+  popular_topics:
+    - title: I'm having trouble authenticating
+      url: /help/trouble-signing-in/issues-with-authentication-methods/
+    - title: Issues verifying your identity
+      url: /help/verify-your-identity/how-to-verify-your-identity/
+    - title: Help with Social Security Administration (SSA)
+      url: /help/specific-agencies/ssa/
+    - title: Help with Trusted Traveler Programs (TTP)
+      url: /help/specific-agencies/trusted-traveler-programs/
   p_1: Browse common topics
   title: How can we help?
 help_subpages:
