--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -258,6 +258,15 @@ help_page:
       image: /assets/img/help/verify-your-id.svg
       title: Verifique su identidad
       url: /es/help/verify-your-identity/overview/
+  popular_topics:
+    - title: Tengo problemas para autenticarme
+      url: /es/help/trouble-signing-in/issues-with-authentication-methods/
+    - title: Issues verifying your identity
+      url: /es/help/verify-your-identity/how-to-verify-your-identity/
+    - title: Help with Social Security Administration (SSA)
+      url: /es/help/specific-agencies/ssa/
+    - title: Help with Trusted Traveler Programs (TTP)
+      url: /es/help/specific-agencies/trusted-traveler-programs/
   p_1: Explorar temas comunes
   title: ¿Cómo podemos ayudarle?
 help_subpages:
