--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -273,6 +273,15 @@ help_page:
       image: /assets/img/help/verify-your-id.svg
       title: Confirmer votre identité
       url: /fr/help/verify-your-identity/overview/
+  popular_topics:
+    - title: Difficultés pour se connecter
+      url: /fr/help/trouble-signing-in/issues-with-authentication-methods/
+    - title: Issues verifying your identity
+      url: /fr/help/verify-your-identity/how-to-verify-your-identity/
+    - title: Help with Social Security Administration (SSA)
+      url: /fr/help/specific-agencies/ssa/
+    - title: Help with Trusted Traveler Programs (TTP)
+      url: /fr/help/specific-agencies/trusted-traveler-programs/
   p_1: Parcourir les thèmes courants
   title: Que pouvons-nous faire pour vous ?
 help_subpages:
