--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -235,9 +235,14 @@ help_page:
       image: /assets/img/help/verify-your-id.svg
       title: 验证你的身份
       url: /zh/help/verify-your-identity/overview/
+    - description: 了解如何保护你自己和你的 Login.gov 帐户免受欺诈。
+      image: /assets/img/help/fraud-concerns.svg
+      title: 欺诈担忧
+      url: /zh/help/fraud-concerns/overview/
   p_1: 浏览常见主题
   title: 我们能怎么帮你？
 help_subpages:
+  fraud-concerns: 欺诈担忧
   get-started: 开始使用Login.gov
   manage-your-account: 管理你的账户
   specific-agencies: 就具体机构获得帮助
