Add new agency applications to Contact Us page
Fixes https://cm-jira.usa.gov/browse/LG-16354

Also fixed existing capitalization in Spanish state names to use
uppercase Estado.

--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -60,6 +60,7 @@ contact_page:
       'DOT National Registry of Certified Medical Examiners': DOT National Registry of Certified Medical Examiners
       'Environmental Protection Agency': Environmental Protection Agency
       'FDIC Resolution Request Management Portal': FDIC Resolution Request Management Portal
+      'Federal Aviation Administration (FAA)': Federal Aviation Administration (FAA)
       'Federal Reserve Board (FRB)': Federal Reserve Board (FRB)
       'FEMA Disaster Assistance': FEMA Disaster Assistance
       'General Services Administration': General Services Administration
@@ -80,6 +81,7 @@ contact_page:
       'National Credit Union Administration (NCUA)': National Credit Union Administration (NCUA)
       'National Endowment for the Humanities (NEH)': National Endowment for the Humanities (NEH)
       'National Labor Relations Board': National Labor Relations Board
+      'National Oceanic and Atmospheric Administration (NOAA)': National Oceanic and Atmospheric Administration (NOAA)
       'National Transportation Safety Board (NTSB)': National Transportation Safety Board (NTSB)
       'Office of Personnel Management': Office of Personnel Management (OPM)
       'OPM Employee Express': OPM Employee Express
@@ -97,6 +99,8 @@ contact_page:
       'State of California': State of California
       'State of Colorado': State of Colorado
       'State of Maryland': State of Maryland
+      'State of Utah': State of Utah
+      'State of Wyoming': State of Wyoming
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Trusted Traveler Programs (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': U.S. Agency for International Development
       'U.S. Citizenship and Immigration Services (USCIS) - E-Verify': U.S. Citizenship and Immigration Services (USCIS) - E-Verify
