--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -230,7 +230,7 @@ help_page:
         account features.
       image: /assets/img/help/get-started.svg
       slug: get-started
-      title: Creating an account
+      title: Create my account
       url: /help/get-started/overview/
     - description: Forgot your password? Locked out of your account? We’ll help you
         resolve access issues.
@@ -242,18 +242,18 @@ help_page:
         email, and more.
       image: /assets/img/help/manage-your-account.svg
       slug: manage-your-account
-      title: Manage account
+      title: Manage my account
       url: /help/manage-your-account/overview/
-    - description: Get help with Trusted Traveler Programs (TTP) and SAM.gov.
-      image: /assets/img/help/help-specific-agencies.svg
-      slug: specific-agencies
-      title: Help with agencies
-      url: /help/specific-agencies/overview/
     - description: Learn about options for verifying your identity.
       image: /assets/img/help/verify-your-id.svg
       slug: verify-your-identity
       title: Verify my identity
       url: /help/verify-your-identity/overview/
+    - description: Get help with Trusted Traveler Programs (TTP) and SAM.gov.
+      image: /assets/img/help/help-specific-agencies.svg
+      slug: specific-agencies
+      title: Help with agencies
+      url: /help/specific-agencies/overview/
   p_1: Browse common topics
   title: How can we help?
 identifier:
