--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -238,7 +238,7 @@ help_page:
         y otras funciones de la cuenta.
       image: /assets/img/help/get-started.svg
       slug: get-started
-      title: Cree una cuenta
+      title: Crear mi cuenta
       url: /es/help/get-started/overview/
     - description: ¿Olvidó su contraseña? ¿Está bloqueado el acceso a su cuenta? Le
         ayudaremos a resolver los problemas de acceso.
@@ -252,17 +252,17 @@ help_page:
       slug: manage-your-account
       title: Administrar una cuenta
       url: /es/help/manage-your-account/overview/
+    - description: Infórmese sobre las opciones para verificar su identidad.
+      image: /assets/img/help/verify-your-id.svg
+      slug: verify-your-identity
+      title: Verificar mi identidad
+      url: /es/help/verify-your-identity/overview/
     - description: Obtenga ayuda con los Programas para viajeros de confianza (TTP) y
         SAM.gov.
       image: /assets/img/help/help-specific-agencies.svg
       slug: specific-agencies
       title: Ayuda con agencias
       url: /es/help/specific-agencies/overview/
-    - description: Infórmese sobre las opciones para verificar su identidad.
-      image: /assets/img/help/verify-your-id.svg
-      slug: verify-your-identity
-      title: Verificar mi identidad
-      url: /es/help/verify-your-identity/overview/
   p_1: Explorar temas comunes
   title: ¿Cómo podemos ayudarle?
 identifier:
