--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -280,6 +280,7 @@ help_page:
     - description: Apprendre comment vous protéger ainsi que votre compte Login.gov
         contre la fraude.
       image: /assets/img/help/fraud-concerns.svg
+      slug: fraud-concerns
       title: Problèmes liés à la fraude
       url: /fr/help/fraud-concerns/overview/
   p_1: Parcourir les thèmes courants
