--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -246,6 +246,7 @@ help_page:
       url: /zh/help/specific-agencies/overview/
     - description: 了解如何保护你自己和你的 Login.gov 帐户免受欺诈。
       image: /assets/img/help/fraud-concerns.svg
+      slug: fraud-concerns
       title: 欺诈担忧
       url: /zh/help/fraud-concerns/overview/
   p_1: 浏览常见主题
