--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -256,6 +256,7 @@ help_page:
       url: /help/specific-agencies/overview/
     - description: Learn how to protect yourself and your Login.gov account from fraud.
       image: /assets/img/help/fraud-concerns.svg
+      slug: fraud-concerns
       title: Fraud concerns
       url: /help/fraud-concerns/overview/
   p_1: Browse common topics
