--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -239,7 +239,7 @@ help_page:
       image: /assets/img/help/verify-your-id.svg
       title: 验证你的身份
       url: /zh/help/verify-your-identity/overview/
-  popular_topics:
+  popular_topics_links:
     - title: 登录有困难
       url: /zh/help/trouble-signing-in/issues-with-authentication-methods/
     - title: Issues verifying your identity
@@ -248,6 +248,7 @@ help_page:
       url: /zh/help/specific-agencies/ssa/
     - title: Help with Trusted Traveler Programs (TTP)
       url: /zh/help/specific-agencies/trusted-traveler-programs/
+  popular_topics: 热门话题
   p_1: 浏览常见主题
   title: 我们能怎么帮你？
 help_subpages:
