--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -249,7 +249,7 @@ help_page:
       image: /assets/img/help/verify-your-id.svg
       title: Verify your identity
       url: /help/verify-your-identity/overview/
-  popular_topics:
+  popular_topics_links:
     - title: I'm having trouble authenticating
       url: /help/trouble-signing-in/issues-with-authentication-methods/
     - title: Issues verifying your identity
@@ -258,6 +258,7 @@ help_page:
       url: /help/specific-agencies/ssa/
     - title: Help with Trusted Traveler Programs (TTP)
       url: /help/specific-agencies/trusted-traveler-programs/
+  popular_topics: Popular topics
   p_1: Browse common topics
   title: How can we help?
 help_subpages:
