--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -258,7 +258,7 @@ help_page:
       image: /assets/img/help/verify-your-id.svg
       title: Verifique su identidad
       url: /es/help/verify-your-identity/overview/
-  popular_topics:
+  popular_topics_links:
     - title: Tengo problemas para autenticarme
       url: /es/help/trouble-signing-in/issues-with-authentication-methods/
     - title: Issues verifying your identity
@@ -267,6 +267,7 @@ help_page:
       url: /es/help/specific-agencies/ssa/
     - title: Help with Trusted Traveler Programs (TTP)
       url: /es/help/specific-agencies/trusted-traveler-programs/
+  popular_topics: Temas de interés
   p_1: Explorar temas comunes
   title: ¿Cómo podemos ayudarle?
 help_subpages:
