--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -247,7 +247,7 @@ help_page:
       url: /help/specific-agencies/overview/
     - description: Learn about options for verifying your identity.
       image: /assets/img/help/verify-your-id.svg
-      title: Verify your identity
+      title: Verify my identity
       url: /help/verify-your-identity/overview/
   p_1: Browse common topics
   title: How can we help?
