--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -256,7 +256,7 @@ help_page:
       url: /es/help/specific-agencies/overview/
     - description: Infórmese sobre las opciones para verificar su identidad.
       image: /assets/img/help/verify-your-id.svg
-      title: Verifique su identidad
+      title: Verificar mi identidad
       url: /es/help/verify-your-identity/overview/
   p_1: Explorar temas comunes
   title: ¿Cómo podemos ayudarle?
