--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -271,7 +271,7 @@ help_page:
       url: /fr/help/specific-agencies/overview/
     - description: Informez-vous sur les possibilités de vérification de votre identité.
       image: /assets/img/help/verify-your-id.svg
-      title: Confirmer votre identité
+      title: Confirmer mon identité
       url: /fr/help/verify-your-identity/overview/
   p_1: Parcourir les thèmes courants
   title: Que pouvons-nous faire pour vous ?
