--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -237,7 +237,7 @@ help_page:
       url: /zh/help/specific-agencies/overview/
     - description: 了解验证你身份的选项。
       image: /assets/img/help/verify-your-id.svg
-      title: 验证你的身份
+      title: 验证我的身份
       url: /zh/help/verify-your-identity/overview/
   p_1: 浏览常见主题
   title: 我们能怎么帮你？
