--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -265,7 +265,7 @@ help_subpages:
   manage-your-account: Administre su cuenta
   specific-agencies: Ayuda con agencias específicas
   trouble-signing-in: ¿Tiene problema para iniciar sesión?
-  verify-your-identity: Verifique su identidad
+  verify-your-identity: Verificar mi identidad
 identifier:
   accessible_labels:
     description: Descripción de la agencia
