--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -238,7 +238,7 @@ help_page:
         y otras funciones de la cuenta.
       image: /assets/img/help/create-account.svg
       slug: create-account
-      title: Empiece a utilizar Login.gov
+      title: Crear una cuenta
       url: /es/help/create-account/overview/
     - description: ¿Olvidó su contraseña? ¿Está bloqueado el acceso a su cuenta? Le
         ayudaremos a resolver los problemas de acceso.
